samples/_failures_safe/1761043450_baa060_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3289d4d.c: In function ‘main’:
./samples/SAFE/__tmp_c3289d4d.c:130:5: error: expected expression at end of input
  130 |     if (collection.count >
      |     ^~
./samples/SAFE/__tmp_c3289d4d.c:130:5: error: expected declaration or statement at end of input
